2003-03-31 Eric Sandall <eric@sandall.us>
	* Updated to use sorcery's init.d installer
	* Removed CONFIGURE as sorcery takes care of that now

2002-06-17 Insomniac <insomniac@japh.nl>
	* version bump to 0.2.1

2002-05-22 Anonymous <anonymous@sourcemage.org>
	* save config dir to /etc/fags when running systemwide

2002-05-20 Anonymous <anonymous@sourcemage.org>
	* BUILD, DETAILS updated for version 0.1.5
	* added POST_INSTALL

2002-05-19 Anonymous <anonymous@sourcemage.org>
	* Spell created for version 0.1.4
