@@ -1,13 +1,13 @@
            SPELL=fags
          VERSION=0.2.1
           SOURCE=$SPELL-$VERSION.tar.gz
-          MD5[0]='01169840153ce6b251a52aae5e5ddedf'
+     SOURCE_HASH=sha512:bb0d32a7e20a9b69b5ca8c980f754d089b2ba62eadb2584b447f1373fa81bfa70fe2b11868384469fcb003f10c20ac08387cf0662a4c5790e5aa3c3c74d00f74
 SOURCE_DIRECTORY=$BUILD_DIRECTORY/$SPELL-$VERSION
    SOURCE_URL[0]=http://www.tty0.org/files/fags/$SOURCE
         WEB_SITE=http://www.tty0.org/page/fags/
+       BUILD_API=2
          ENTERED=20020519
          UPDATED=20020522
-      MAINTAINER=jrocha@sourcemage.org
            SHORT="an open source AudioGalaxy client"
 cat << EOF
 FAGS (Free AudioGalaxy Satellite) is an open source
