@@ -1,0 +1,1 @@
+  message "Edit ${MESSAGE_COLOR}/etc/fags/config${DEFAULT_COLOR} before starting FAGS."
