@@ -1,7 +1,0 @@
-if  [  -f /etc/fags/config  ]  && ! grep -q -E '^user\W+username$'  /etc/fags/config;  then
-  if  [  -x  /etc/init.d/fags.sh  ]; then
-    /etc/init.d/fags.sh start
-  fi
-else
-  message "Edit ${MESSAGE_COLOR}/etc/fags/config${DEFAULT_COLOR} before starting FAGS."
-fi
