@@ -1,3 +1,0 @@
-if  [  -x  /etc/init.d/fags.sh  ]; then
-           /etc/init.d/fags.sh stop
-fi
