@@ -1,0 +1,8 @@
+#!/bin/sh
+
+PROGRAM=/usr/bin/fags
+ARGS="-b"
+RUNLEVEL=3
+NEEDS="+network"
+
+. /etc/int.d/smgl_init
