@@ -1,3 +1,11 @@
+2005-11-22 George Sherwood <george@beernabeer.com>
+	* DETAILS: Updated for BUILD_API=2, SOURCE_HASH. Removed MAINTAINER
+	* BUILD: Updated for BUILD_API=2
+	* INSTALL, FINAL: Added for BUILD_API=2
+	* POST_INSTALL, POST_REMOVE: Deleted for BUILD_API=2
+	* fags.sh: removed for new init system
+	* fags: Added for new init system
+
 2003-03-31 Eric Sandall <eric@sandall.us>
 	* Updated to use sorcery's init.d installer
 	* Removed CONFIGURE as sorcery takes care of that now
